--- a/_config.yml
+++ b/_config.yml
@@ -15,15 +15,15 @@ style: styles-6
 #Profile information
 name: Shehab Mohamed
 tagline: Software Developer
-pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+pic: profile.jpeg  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
 email: shehab_m@aucegypt.edu
-phone: 
+#phone: 
 website: shehabce.github.io #do not add http://
 linkedin: Shehab Abdel-Salam
 github: ShehabCE
-twitter: ''
+#twitter: ''
 
 
 # Tracker
