Updated sidebar layout

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ pic: profile.jpeg  #place a 100x100 picture inside /assets/images/ folder and pr
 email: shehab_m@aucegypt.edu
 #phone: 
 website: shehabce.github.io #do not add http://
-linkedin: Shehab Abdel-Salam
+linkedin: shehab-abdel-salam-0a12ab97/
 github: ShehabCE
 #twitter: ''
 
