--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ baseurl: '' #change it according to your repository name
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
 #style: styles-2
-#style: styles-3
-style: styles-4
+style: styles-3
+#style: styles-4   #Purple
 #style: styles-5  #Orange
 #style: styles-6  #Grey
 
