--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: '' #change it according to your repository name
 
 
 # Enable one of these styles by removing #. Style will be applied only after restarting the build or serve.
-style: styles-2
+style: styles-2   #lime green
 #style: styles-3  #Green
 #style: styles-4  #Purple
 #style: styles-5  #Orange
