--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,10 @@ jekyll-archives:
 # Category descriptions (for archive pages)
 descriptions:
   - cat: Profound-Thoughts
-    desc: "Some thoughtful stuff."
+    # desc: "Some thoughtful stuff."
 
   - cat: Technical
-    desc: "Some tech stuff."
+    # desc: "Some tech stuff."
 
   # - cat: Projects
   #   desc: "Showcasing my work."
