--- a/_config.yml
+++ b/_config.yml
@@ -48,11 +48,11 @@ jekyll-archives:
 
 # Category descriptions (for archive pages)
 descriptions:
-  - cat: Food-For-Thought
-    # desc: "Some thoughtful stuff."
+  - cat: A
+    desc: "Some thoughtful stuff."
 
-  - cat: Computer-Science
-    # desc: "Some tech stuff."
+  - cat: B
+    desc: "Some tech stuff."
 
   # - cat: Projects
   #   desc: "Showcasing my work."
