--- a/_config.yml
+++ b/_config.yml
@@ -49,10 +49,10 @@ jekyll-archives:
 # Category descriptions (for archive pages)
 descriptions:
   - cat: Computer-Science
-    desc: "..."
+    # desc: "..."
 
   - cat: Food-for-thought
-    desc: "..."
+    # desc: "..."
 
   # - cat: Projects
   #   desc: "Showcasing my work."
