--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ subtitle: "Writing articles. Writing code. Sometimes I do both."
 email: shehab_m@aucegypt.edu
 name: Shehab Abdel-Salam
 description: >
-   Writing articles. Writing code. Sometimes I do both.
+  Writing articles. Writing code. Sometimes I do both.
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://shehabmmohamed.github.io" # the base hostname & protocol for your site
+url: "http://shehab-as.github.io" # the base hostname & protocol for your site
 cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
@@ -49,7 +49,7 @@ jekyll-archives:
 # Category descriptions (for archive pages)
 descriptions:
   - cat: Computer-Science
-    # desc: "..."
+  # desc: "..."
 
   - cat: Food-for-thought
     # desc: "..."
@@ -58,7 +58,7 @@ descriptions:
     # desc: "..."
 
   # - cat: Projects
-    # desc: "Showcasing my work."
+  # desc: "Showcasing my work."
 
 # Social icons and sharing options
 #
@@ -92,8 +92,8 @@ social:
 
   - name: GitHub
     icon: github
-    username: Shehab 
-    url: https://github.com/ShehabMMohamed
+    username: Shehab
+    url: https://github.com/shehab-as
     share: true
 
   - name: LinkedIn
