--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ social:
 
   - name: GitHub
     icon: github
-    username: Shehab
+    username: shehab-as
     url: https://github.com/shehab-as
     share: true
 
@@ -119,10 +119,10 @@ social:
 
   - name: Instagram
     icon: instagram
-    username:
-    url:
+    username: shehabas__
+    url: https://www.instagram.com/shehabas__
     desc: Follow me on Instagram
-    share: false
+    share: true
 
   - name: Pinterest
     icon: pinterest
