Fix link, add OOO section

--- a/_config.yml
+++ b/_config.yml
@@ -99,8 +99,8 @@ social:
 
   - name: Instagram
     icon: instagram
-    username: shehabas__
-    url: https://www.instagram.com/shehabas__
+    username: shehab.abdel_salam
+    url: https://www.instagram.com/shehab.abdel_salam
     desc: Follow me on Instagram
     share: true
 
